--- a/templates/clusterIssuer.yml
+++ b/templates/clusterIssuer.yml
@@ -2,7 +2,7 @@ apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: {{ .Values.clusterIssuer.name }}
-  namespace: {{ .Values.clusterIssuer.namespace }}
+  #namespace: {{ .Values.clusterIssuer.namespace }}
 spec:
   acme:
     # You must replace this email address with your own.
