--- a/templates/ingress.yaml
+++ b/templates/ingress.yaml
@@ -3,15 +3,15 @@ kind: Ingress
 metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/ssl-redirect: "true"
-    kubernetes.io/tls-acme: "true"
-    cert-manager.io/cluster-issuer: {{ .Values.clusterIssuer.name }}
+    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
+    # kubernetes.io/tls-acme: "true"
+    # cert-manager.io/cluster-issuer: {{ .Values.clusterIssuer.name }}
   name: {{ .Values.ingress.name }}
 spec:
   tls:
     - hosts:
         - {{ .Values.ingress.host }}
-      secretName: {{ .Values.clusterIssuer.keyname }}
+      secretName: {{ .Values.ingress.keyname }}
   rules:
     - host: {{ .Values.ingress.host }}
       http:
